[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/npcs/Khali.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/characters/town citizens/Fem. Citizens/Khali/Khali.png" type="Texture" id=2]
[ext_resource path="res://src/interface/Images/quote-box.png" type="Texture" id=3]
[ext_resource path="res://src/interface/DialogBox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 32, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 96, 448, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "win",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 71.0

[node name="Khali" type="Area2D" groups=["minimap_objects"]]
z_index = 2
z_as_relative = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibleArea"]
shape = SubResource( 7 )

[node name="msg" type="Sprite" parent="."]
visible = false
position = Vector2( 39, -43 )
scale = Vector2( 0.125, 0.125 )
z_index = 1
texture = ExtResource( 3 )

[node name="DialogBox" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="VisibleArea" to="." method="_on_VisibleArea_body_entered"]
[connection signal="body_exited" from="VisibleArea" to="." method="_on_VisibleArea_body_exited"]
